# flowlocal

./: .gitignore  README.md  pyproject.toml
flowlocal/: app.py  app_win.py  cleanup.py  config.py  hotkey.py  main.py  overlay.py  overlay_win.py  paster.py  paster_win.py  recorder.py  transcriber.py
scripts/: com.flowlocal.plist  install.ps1  install.sh  uninstall.ps1  uninstall.sh
tests/: test_pipeline.py
