[project]
name = "flowlocal"
version = "0.1.0"
description = "Private, on-device voice dictation for macOS. Hold a hotkey, speak, release — polished text lands in whatever app you're in. Zero network calls."
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlx-whisper>=0.4.2",
    "sounddevice>=0.5.0",
    "numpy>=1.26",
    "pynput>=1.7.7",
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
]

[project.scripts]
flowlocal = "flowlocal.app:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flowlocal"]
