[project]
name = "flowlocal"
version = "0.1.0"
description = "Private, on-device voice dictation for macOS. Hold a hotkey, speak, release — polished text lands in whatever app you're in. Zero network calls."
license = { text = "MIT" }
authors = [{ name = "Blake Schafer" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "sounddevice>=0.5.0",
    "numpy>=1.26",
    "pynput>=1.7.7",
    # macOS (Apple Silicon)
    "mlx-whisper>=0.4.2; sys_platform == 'darwin'",
    "rumps>=0.4.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    # Windows
    "faster-whisper>=1.1.0; sys_platform == 'win32'",
    "pystray>=0.19.5; sys_platform == 'win32'",
    "pillow>=10.0; sys_platform == 'win32'",
]

[project.scripts]
flowlocal = "flowlocal.main:main"

[project.gui-scripts]
# Windows: launches under pythonw.exe, so no console window appears.
flowlocalw = "flowlocal.main:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flowlocal"]
